--- a/CarDealer/App.config
+++ b/CarDealer/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=CarDealerDB; Integrated Security=SSPI; " name="connectionString"/>
+  </connectionStrings>
 </configuration>
