--- a/CarDealer/CarDealer.csproj
+++ b/CarDealer/CarDealer.csproj
@@ -43,6 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\EFuelType.cs" />
+    <Compile Include="Enums\EOptionsLevel.cs" />
+    <Compile Include="Models\Brand.cs" />
+    <Compile Include="Models\CarInventory.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Color.cs" />
+    <Compile Include="Models\Deal.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Engine.cs" />
+    <Compile Include="Models\Model.cs" />
+    <Compile Include="Models\Operation.cs" />
+    <Compile Include="Models\Option.cs" />
+    <Compile Include="Models\Rental.cs" />
+    <Compile Include="Models\Reports.cs" />
+    <Compile Include="Models\ServiceIntervention.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DatabaseHelper.cs" />
