added menu flow part 1 (login / register)

--- a/CarDealer/CarDealer.csproj
+++ b/CarDealer/CarDealer.csproj
@@ -43,10 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\ClientDAO.cs" />
+    <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DAO\ModelDAO.cs" />
     <Compile Include="Enums\EFuelType.cs" />
     <Compile Include="Enums\EOptionsLevel.cs" />
+    <Compile Include="Interfaces\IClientDAO.cs" />
+    <Compile Include="Interfaces\IEmployeeDAO.cs" />
+    <Compile Include="Interfaces\IMainMenu.cs" />
     <Compile Include="Interfaces\IModelDAO.cs" />
+    <Compile Include="Menu\MainMenu.cs" />
+    <Compile Include="Menu\MainMenuProxy.cs" />
     <Compile Include="Models\Brand.cs" />
     <Compile Include="Models\CarInventory.cs" />
     <Compile Include="Models\Client.cs" />
