--- a/CarDealer/CarDealer.csproj
+++ b/CarDealer/CarDealer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Enums\EFuelType.cs" />
     <Compile Include="Enums\EOptionsLevel.cs" />
     <Compile Include="Interfaces\ICarBuilder.cs" />
+    <Compile Include="Interfaces\IClient.cs" />
     <Compile Include="Interfaces\IDecoratedCar.cs" />
     <Compile Include="Interfaces\IModelDAO.cs" />
     <Compile Include="Interfaces\IOptionDAO.cs" />
