added CarService in MainMenu

--- a/CarDealer/App.config
+++ b/CarDealer/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add connectionString="Data Source=DESKTOP-0K70U3P; Initial Catalog=CarDealerDB; Integrated Security=SSPI; " name="connectionString"/>
+    <add connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=CarDealerDB; Integrated Security=SSPI; " name="connectionString"/>
   </connectionStrings>
 </configuration>
